--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -21,6 +21,11 @@
 
   <!-- Style css -->
   <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
+<!-- Include Font Awesome in index.html -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+/>
 
 
   <!--
