--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -22,12 +22,9 @@
   <!-- Style css -->
   <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
   <!-- Include Font Awesome in index.html -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+ 
 
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
-
-
+  <link rel="stylesheet" type="text/css" href="https://site-assets.fontawesome.com/releases/v6.1.0/css/all.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
