--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -26,7 +26,7 @@
 
   <link rel="stylesheet" type="text/css" href="https://site-assets.fontawesome.com/releases/v6.1.0/css/all.css">
  
-  <title>React App</title>
+  <title id="title101">React App</title>
 </head>
 
 <body>
