--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link id="favicon" rel="icon" href="%PUBLIC_URL%/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/images/favicon.png">
+  <!-- <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/images/favicon.png"> -->
   <link href="%PUBLIC_URL%/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendor/swiper/css/swiper-bundle.min.css">
   <link rel="stylesheet"
