--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -3,65 +3,42 @@
 
 <head>
   <meta charset="utf-8" />
-  <link id="favicon" rel="icon" href="%PUBLIC_URL%/" />
+  <link id="favicon" rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/images/favicon.png"> -->
-  <link href="%PUBLIC_URL%/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendor/swiper/css/swiper-bundle.min.css">
+
+  <link rel="manifest" href="/manifest.json" />
+  <link href="/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/vendor/swiper/css/swiper-bundle.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
-
-  <!-- Style css -->
-  <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
-  <!-- Include Font Awesome in index.html -->
- 
+  <link href="/assets/css/style.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="https://site-assets.fontawesome.com/releases/v6.1.0/css/all.css">
- 
+
   <title id="title101">React App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <script src="/assets/vendor/global/global.min.js"></script>
+  <script src="/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  <script src="%PUBLIC_URL%/assets/vendor/global/global.min.js"></script>
-  <script src="%PUBLIC_URL%/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+  <script src="/assets/vendor/chart-js/chart.bundle.min.js"></script>
 
-  <!-- Apex Chart -->
-  <script src="%PUBLIC_URL%/assets/vendor/chart-js/chart.bundle.min.js"></script>
+  <script src="/assets/vendor/counter/counter.min.js"></script>
+  <script src="/assets/vendor/counter/waypoint.min.js"></script>
 
-  <!-- counter -->
-  <script src="%PUBLIC_URL%/assets/vendor/counter/counter.min.js"></script>
-  <script src="%PUBLIC_URL%/assets/vendor/counter/waypoint.min.js"></script>
+  <script src="/assets/vendor/peity/jquery.peity.min.js"></script>
+  <script src="/assets/vendor/swiper/js/swiper-bundle.min.js"></script>
 
-  <!-- Chart piety plugin files -->
-  <script src="%PUBLIC_URL%/assets/vendor/peity/jquery.peity.min.js"></script>
-  <script src="%PUBLIC_URL%/assets/vendor/swiper/js/swiper-bundle.min.js"></script>
-
-  <!-- Dashboard 1 -->
-
-  <script src="%PUBLIC_URL%/assets/js/custom.min.js"></script>
-  <script src="%PUBLIC_URL%/assets/js/dlabnav-init.js"></script>
-  <script src="%PUBLIC_URL%/assets/js/demo.js"></script>
-  <script src="%PUBLIC_URL%/assets/js/styleSwitcher.js"></script>
+  <script src="/assets/js/custom.min.js"></script>
+  <script src="/assets/js/dlabnav-init.js"></script>
+  <script src="/assets/js/demo.js"></script>
+  <script src="/assets/js/styleSwitcher.js"></script>
 </body>
 
 </html>
